# camera-lidar-gazebo-simulation

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: collect_data.launch  evaluate_tf.launch  stereo_lidar.launch
launch/experiments/: stereo_lidar_1.launch  stereo_lidar_2.launch  stereo_lidar_3.launch  stereo_lidar_4.launch  stereo_lidar_5.launch  stereo_lidar_6.launch  stereo_lidar_7.launch  stereo_lidar_8.launch
models/bumblebee_xb3/: bumblebee_xb3.urdf.xacro  bumblebee_xb3_spawn.urdf.xacro  model.sdf
models/checkerboard_5_8_0_2/: checkerboard_spawn.urdf.xacro
models/velodyne_HDL32/: HDL-32E.urdf.xacro  HDL-32E_spawn.urdf.xacro  model.sdf
script/: project_lidar_on_image.py  slerp.py
src/: collectData.cpp  evaluateTF.cpp
